add additional meta tags in index.html file

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="A mini netflix application for searching for movies and series online">
+  <meta name="keywords" content="movies, series, netflix, favorites">
+  <meta name="author" content="Elijah Enuem-Udogu">
   <title>Netflix Mini</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
